Changes since 7.7.0

    - Fixed a bug that private.xml does not work properly if <identifier> contains white space.

----------------------------------------------------------------------
= version 7.7.0 =
    - Fixed a bug introduced in version 7.6.0 that detecting of Input Sources does not work properly in Japanese and some other languages.

----------------------------------------------------------------------
= version 7.6.0 =
    - Added <replacementdef>. You can replace preset settings behavior by this.
    - Added <include>. You can load xml files in private.xml.
    - Added --ScrollWheelToKey--.
    - Added --ScrollWheelToScrollWheel--.
    - Added KeyCode::VK_WAIT_*.
    - Improved KeyCode::VK_CHANGE_INPUTMODE_* behavior.
    - Improved XML processing engine. (XML reloading is 2x faster.)
    - Some minor improvements.

----------------------------------------------------------------------
= version 7.5.0 =
    - Dynamic ApplicationType,DeviceVendor,DeviceProduct definition feature has been added.
    - Support Growl-1.3 on notifications.
      http://pqrs.org/macosx/keyremap4macbook/document.html#t4
    - Added --StripModifierFromScrollWheel--.
    - Added Option::KEYTOKEY_BEFORE_KEYDOWN, Option::KEYTOKEY_AFTER_KEYUP.
    - Added KeyCode::VK_CONSUMERKEY_*.
    - Some minor improvements.
    - Added about 40 kinds settings to preset.

----------------------------------------------------------------------
= version 7.4.0 =
    - Some improvements on Mac OS X 10.7 (Lion).
    - Removed "General > Enable CapsLock LED Hack".
      If you're using this setting for PCKeyboardHack,
      use "No Action" configuration instead.
      http://pqrs.org/macosx/keyremap4macbook/extra.html#t1p1
    - Clean up "Simultaneous Vi Mode".
      (and split some options into "Home Row Arrow and Modifier Mode".)
    - Added "[Key Overlaid Modifier] Initial Modifier Wait" preference into "Key Repeat" tab.
      KeyOverlaidModifier changes key to modifier after this wait.